[gd_scene load_steps=5 format=3 uid="uid://inlai33txeio"]

[ext_resource type="Theme" uid="uid://2ti6cnlhlu2u" path="res://Themes/global_theme.tres" id="1_yovy8"]
[ext_resource type="Script" path="res://MenuComponents/tab_menu.gd" id="2_eo6te"]
[ext_resource type="Texture2D" uid="uid://c15totmx0iip" path="res://Icons/XboxButtons/Left Bumper.png" id="2_nj8c3"]
[ext_resource type="Texture2D" uid="uid://cpx52i57inqi6" path="res://Icons/XboxButtons/Right Bumper.png" id="3_pe7aw"]

[node name="TabMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yovy8")
script = ExtResource("2_eo6te")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="ContentMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftButtonTexture" type="TextureRect" parent="ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_nj8c3")
expand_mode = 3

[node name="TabBarMarginContainer" type="MarginContainer" parent="ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="TabBar" type="TabBar" parent="ContentMarginContainer/VBoxContainer/HBoxContainer/TabBarMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false

[node name="RightButtonTexture" type="TextureRect" parent="ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_pe7aw")
expand_mode = 3

[node name="Spacer2" type="Control" parent="ContentMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="ContentMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false
